[gd_scene load_steps=13 format=3 uid="uid://nn0u1dojrsuy"]

[ext_resource type="Script" path="res://ui_elements/game_over_menu.gd" id="1_jse2e"]
[ext_resource type="Texture2D" uid="uid://dg71q6buueysm" path="res://Sprites/SpritesUI/GameOverBackground.png" id="2_aw4bx"]
[ext_resource type="Texture2D" uid="uid://7utn5f7c4pye" path="res://Sprites/SpritesUI/MainMenuButtons.png" id="3_buwku"]

[sub_resource type="Animation" id="Animation_w6hxn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverBackground:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverBackground:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverBackground:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(180, 180)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOverBackground:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_p5cm6"]
resource_name = "FallingAsleep"
length = 4.0
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverBackground:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverBackground:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverBackground:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(180, 180)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOverBackground:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_sleep_loop"
}]
}

[sub_resource type="Animation" id="Animation_rw21r"]
resource_name = "Sleeping"
length = 4.0
loop_mode = 1
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverBackground:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverBackground:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverBackground:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(180, 180)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOverBackground:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nq76b"]
_data = {
"FallingAsleep": SubResource("Animation_p5cm6"),
"RESET": SubResource("Animation_w6hxn"),
"Sleeping": SubResource("Animation_rw21r")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_4s73h"]
atlas = ExtResource("3_buwku")
region = Rect2(0, 0, 60, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo6wn"]
atlas = ExtResource("3_buwku")
region = Rect2(0, 15, 60, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsol0"]
atlas = ExtResource("3_buwku")
region = Rect2(0, 30, 60, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjfj3"]
atlas = ExtResource("3_buwku")
region = Rect2(0, 45, 60, 15)

[sub_resource type="LabelSettings" id="LabelSettings_gdagq"]
font_size = 20

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jse2e")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="Screen" type="Control" parent="AspectRatioContainer"]
layout_mode = 2

[node name="GameOverBackground" type="Sprite2D" parent="AspectRatioContainer/Screen"]
position = Vector2(180, 180)
texture = ExtResource("2_aw4bx")
hframes = 2
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="AspectRatioContainer/Screen"]
libraries = {
"": SubResource("AnimationLibrary_nq76b")
}

[node name="StartNewGameButton" type="TextureButton" parent="AspectRatioContainer/Screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0113333
anchor_top = 0.850111
anchor_right = -0.0113333
anchor_bottom = 0.850111
offset_left = -87.92
offset_top = -22.04
offset_right = 88.08
offset_bottom = 21.96
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_4s73h")
texture_pressed = SubResource("AtlasTexture_eo6wn")
texture_hover = SubResource("AtlasTexture_lsol0")
texture_disabled = SubResource("AtlasTexture_fjfj3")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="AspectRatioContainer/Screen/StartNewGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Start new Game"
label_settings = SubResource("LabelSettings_gdagq")

[node name="ExitToMainMenuButton" type="TextureButton" parent="AspectRatioContainer/Screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.01111
anchor_top = 0.85
anchor_right = 1.01111
anchor_bottom = 0.85
offset_left = -88.0
offset_top = -22.0
offset_right = 88.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_4s73h")
texture_pressed = SubResource("AtlasTexture_eo6wn")
texture_hover = SubResource("AtlasTexture_lsol0")
texture_disabled = SubResource("AtlasTexture_fjfj3")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="AspectRatioContainer/Screen/ExitToMainMenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit to Menu"
label_settings = SubResource("LabelSettings_gdagq")

[connection signal="pressed" from="AspectRatioContainer/Screen/StartNewGameButton" to="." method="_on_start_new_game_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Screen/ExitToMainMenuButton" to="." method="_on_exit_to_main_menu_button_pressed"]
